--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="brand">
           <img src="logo.png" alt="Óptica Cristal" />
           <div>
-            <h1>Optica Cristal v 1</h1>
+            <h1>v 15 Optica Cristal</h1>
             <p class="muted small">San Miguel • Argentina</p>
           </div>
         </div>
