--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
   </div>
 
   <!-- JS -->
-  <script type="module" src="./js/main.js?v=21"></script>
+<script type="module" src="js/main.js?v=2025-10-04-ifr"></script>
 
   <!-- Cálculo de totales en vivo (aislado) -->
   <script type="module">
